// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyframes basic 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  animation: animation-0;
}

<div
  class="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes basic 2`] = `
[
  ".css-1mzou9w{animation:animation-1bi8wtt;}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes keyframes used in css call 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

@keyframes animation-1 {
  from {
    color: green;
  }

  to {
    color: yellow;
  }
}

.emotion-0 {
  animation: animation-0 1s animation-1;
}

<div
  class="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes keyframes used in css call 2`] = `
[
  ".css-9yzsha{animation:animation-1bi8wtt 1s animation-1ajb83a;}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
]
`;

exports[`keyframes multiple keyframes object 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

@keyframes animation-1 {
  from {
    color: green;
  }

  to {
    color: yellow;
  }
}

.emotion-0 {
  animation: animation-0 1s animation-1;
}

<div
  class="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes multiple keyframes object 2`] = `
[
  ".css-1jqzi3u{animation:animation-1bi8wtt 1s animation-1ajb83a;}",
  "@keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  animation: animation-0 1s;
}

<div
  class="emotion-0"
>
  animation-o4c3es
</div>
`;

exports[`keyframes object 2`] = `
[
  ".css-d88cqt{animation:animation-o4c3es 1s;}",
  "@keyframes animation-o4c3es{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object with animation and opaque keyframes as value 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  animation: animation-0;
  animation-duration: 1s;
}

<div
  class="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes object with animation and opaque keyframes as value 2`] = `
[
  ".css-g32qbw{animation:animation-1bi8wtt;animation-duration:1s;}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object with animationName and opaque keyframes as value 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  animation-name: animation-0;
  animation-duration: 1s;
}

<div
  class="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes object with animationName and opaque keyframes as value 2`] = `
[
  ".css-wo7teo{animation-name:animation-1bi8wtt;animation-duration:1s;}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object with animationName and string keyframes as value 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  animation-name: animation-0;
  animation-duration: 1s;
}

<div
  class="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes object with animationName and string keyframes as value 2`] = `
[
  ".css-wo7teo{animation-name:animation-1bi8wtt;animation-duration:1s;}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object with string keyframes 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  animation: animation-0 1s;
}

<div
  class="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes object with string keyframes 2`] = `
[
  ".css-1wh2ide{animation:animation-1bi8wtt 1s;}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes without css call 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  animation: animation-0;
}

<div
  class="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes without css call 2`] = `
[
  ".css-1mzou9w{animation:animation-1bi8wtt;}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;
